Change hello-world code to be httpserver
This helps make CI/CD that will reflect our
end goals better than simply printing something
out.

--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,7 @@ steps:
   settings:
     repo: nsmith5/vgraas
     autotag: true
+    force_tag: true
     username: nsmith5
     password:
       from_secret: docker_password
