--- a/.drone.yml
+++ b/.drone.yml
@@ -26,18 +26,12 @@ steps:
     password:
       from_secret: docker_password
 
-- name: helm-template
-  image: lachlanevenson/k8s-helm
-  commands:
-  - "helm template chart --name staging --set namespace=staging > deploy.yaml"
-   
-- name: deploy-staging
-  image: bitnami/kubectl:1.14
+- name: deployment
+  image: nsmith5/k8s:alpine
   environment:
     CONFIG:
       from_secret: kubeconfig
   commands:
-  - mkdir -p ~/.kube/config
-  - "echo $$CONFIG > ~/.kube/config"
-  - kubectl get pods
-  - kubectl apply -f deploy.yaml
+  - "helm template chart --name staging --set namespace=staging > deploy.yaml"
+  - echo $CONFIG > kubeconfig
+  - kubectl --kubeconfig=kubeconfig apply -f deploy.yaml 
