Try DRONE_TAG instead of TAG in CI/CD pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -71,7 +71,7 @@ steps:
     API_SERVER:
       from_secret: api_server
   commands:
-  - helm template chart --name vgrass-prod --set namespace=production,image.tag=${TAG},ingress.expose=true,ingress.host=vgraas.nfsmith.ca,ingress.email=letsencrypt@nfsmith.ca > prod-deploy.yaml
+  - helm template chart --name vgrass-prod --set namespace=production,image.tag=${DRONE_TAG},ingress.expose=true,ingress.host=vgraas.nfsmith.ca,ingress.email=letsencrypt@nfsmith.ca > prod-deploy.yaml
   - kubectl --token=$${TOKEN} --server=$${API_SERVER} --insecure-skip-tls-verify apply -f prod-deploy.yaml
 
 trigger:
